--- a/MobileGuards-Server/MobileGuards-Server.vcxproj.filters
+++ b/MobileGuards-Server/MobileGuards-Server.vcxproj.filters
@@ -37,6 +37,9 @@
       <Extensions>h</Extensions>
       <ParseFiles>true</ParseFiles>
     </Filter>
+    <Filter Include="Logic">
+      <UniqueIdentifier>{ac772569-ea7c-46c0-a9d4-1787aba8d43b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
@@ -65,6 +68,10 @@
     <ClCompile Include="Network\SocketReadWriteHandler.cpp">
       <Filter>Network</Filter>
     </ClCompile>
+    <ClCompile Include="synthetise.cpp" />
+    <ClCompile Include="Logic\SyncQueue.cpp">
+      <Filter>Logic</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -75,6 +82,7 @@
     <ClInclude Include="DB\MSSQLConnectionHelper.h">
       <Filter>DB</Filter>
     </ClInclude>
+    <ClInclude Include="synthetise.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="Network\ASIOServer.h">
@@ -82,6 +90,9 @@
     </CustomBuild>
     <CustomBuild Include="Network\SocketReadWriteHandler.h">
       <Filter>Network</Filter>
+    </CustomBuild>
+    <CustomBuild Include="Logic\SyncQueue.h">
+      <Filter>Logic</Filter>
     </CustomBuild>
   </ItemGroup>
 </Project>
